1.0.0 - currently working on

Features:
- [#5662] Add an EventStateService
- [#5660] Add an EmailService
- [#5664] Per-event flag for muting the notification emails
- [#5651] Convert the cron job to a Scheduler task
- [#5650] Limit the number of seats in the registration drop-down
- [#5653] Add a configuration for PDF rendering of the manual
- [#5628] Add a RealURL auto configuration

Bug fixes:
- [#5671] Test failures in MailNotifierTest
- [#5669] Disable the new checkboxes by default
- [#5648] Also email the organizers when a registration make the event more than possible
- [#5413] showFeUserFieldsInRegistrationForm does not hide unused markers
- [#5649] Heading for the FE user gender is missing in the CSV export
- [#5624] Salutation from onetimeaccount not used for the billing address
- [#5602] Stop requiring the oelib autoloader
- [#5539] Move class.ext_update.php back into the extension root
- [#5235] Explicitly provide the configuration check namespaces
- [#5389] Crash when confirming/canceling an event with time-slots
- [#5416] Relax the static_info_tables version dependencies
- [#5402] Add link to bug tracker
- [#5400] Allow more than 22 pages in the flexforms
- [#5321] Update .htaccess to be Apache 2.4 compatible

Cleanup:
- [#5632] Move language files to Resources/Private/Language
- [#5660] Move the cancelation/confirmation of an event to services
- [#5659] Remove the "used tools" section from the manual
- [#5658] Replace "language" in the PHPDoc
- [#5657] Remove the byte order mark from the ReST files
- [#5642] Only use the status constants from the new event model
- [#5623] Use Tx_Oelib_Time::SECONDS_PER_DAY and drop our own constant
- [#5646] Rename the test case classes to reflect the folder structure
- [#5647] Replace language with LanguageService and initialize it
- [#5617] Rename tx_seminars_registrationchild to Tx_Seminars_Tests_Unit_Fixtures_OldModel_TestingRegistration