@@ -1,6 +1,7 @@
 1.0.0 - currently working on
 
 Features:
+- [#5666] Configuration for the maximum number of seats in the registration form
 - [#5662] Add an EventStateService
 - [#5660] Add an EmailService
 - [#5664] Per-event flag for muting the notification emails
